# productivityplatform

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: basic_usage.py
src/ml_platform/: __init__.py  cli.py  scaffold.py
src/ml_platform/core/: config.py
src/ml_platform/data/: __init__.py  loader.py
src/ml_platform/evaluation/: __init__.py  engine.py  report.py
src/ml_platform/tracking/: __init__.py  models.py  store.py
src/ml_platform/training/: __init__.py  base.py  reproducibility.py
tests/: test_smoke.py
